<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="workay.development.workayparceiros.Login.Cadastro">

    <TextView
        android:id="@+id/loginExistCadastro"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:text="@string/conta_exists"
        android:textSize="@dimen/aviso_form"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmSenhaCadastro"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/buttonCadastro"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:elevation="24dp"
        android:text="@string/cadastrar_button"
        android:textSize="@dimen/text_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/loginExistCadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />



    <EditText
        android:id="@+id/emailCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"


        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/login_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp" />

    <EditText
        android:id="@+id/senhaCadastro"

        android:layout_width="0dp"


        android:layout_height="49dp"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/senha_hint"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailCadastro" />

    <EditText
        android:id="@+id/confirmSenhaCadastro"

        android:layout_width="0dp"


        android:layout_height="49dp"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/confirmar_senha_hint"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaCadastro" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />
</android.support.constraint.ConstraintLayout>
</ScrollView>